--- a/pages/categorias/bebidas.html
+++ b/pages/categorias/bebidas.html
@@ -33,7 +33,7 @@
         </div>
         <nav class="navbar navbar-expand-lg bg-nav position-fixed w-100">
           <div class="container-fluid py-2 mt-3">
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="../../index.html"
               ><img class="logo" src="../../img/logo_large.png" alt=""
             /></a>
             <button
@@ -50,12 +50,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" href="#"
+                  <a class="nav-link active" href="../../index.html"
                     ><i class="bi bi-house-door"></i> Inicio</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
+                  <a class="nav-link" href="../../pages/carrito.html"
                     ><i class="bi bi-cart"></i> Pedidos</a
                   >
                 </li>
