agregue el maquetado de administrador productos

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -138,27 +138,151 @@
         <section>
             <ul class="navbar-nav menu-especialidades ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./categorias/sandwiches.html">SÁNDWICHES</a>
+                    <a class="nav-link" href="./categorias/sandwiches.html">SÁNDWICHES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">PIZZAS</a>
+                    <a class="nav-link" href="./categorias/pizzas.html">PIZZAS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">BEBIDAS</a>
+                    <a class="nav-link" href="./categorias/bebidas.html">BEBIDAS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">POSTRES</a>
+                    <a class="nav-link" href="./categorias/postres.html">POSTRES</a>
                 </li>
             </ul>
         </section>
-        <section>
-           
+        <section class="container my-3">
+          <h2 class="texto-menu">Nuestro menú</h2>
+          <hr class="linea-menu">
         </section>
+        <div class="row row-cols-3 my-5  text-center menu-sandwich justify-content-evenly">
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-sandwiches/sandwich.png" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Sándwich</h5>
+                <p>$3000</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-sandwiches/sandwich.png" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Sándwich</h5>
+                <p>$3000</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-sandwiches/sandwich.png" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Sándwich</h5>
+                <p>$3000</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-pizzas/pizzas.png" alt="">
+            </div>
+            <div class="card-bg ">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-pizzas/pizzas.png" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-pizzas/pizzas.png" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+          <div class="col col-sm-12 card-menu">
+            <div class="card-img">
+                <img class="img-fluid" src="../../img/cat-bebidas/vinos.jpeg" alt="">
+            </div>
+            <div class="card-bg py-2">
+                <h5>Pizza</h5>
+                <p>$3500</p>
+                <button class="btn">Agregar a pedidos</button>
+            </div>
+          </div>
+        </div>
+        
       </main>
       <footer>
         <section class="row  text-center container mx-auto">
           <div class="col-md-4 mt-4">
-           <a href="index.html"><img class="footer-logo my-5" src="./img/logo_large.png" alt=""></a>
+           <a href="../index.html"><img class="footer-logo my-5" src="../img/logo_large.png" alt=""></a>
           </div>
           <div class="col-md-4 mt-4">
             <h5>Horarios:</h5>
