--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
+                <a class="nav-link" href="./pages/administrador/adminProductos.html"
                   ><i class="bi bi-tools"></i> Administrador</a
                 >
               </li>
