--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
-                  ><i class="bi bi-person-circle"></i> Iniciar sesión</a
+                <button type="button" class="btn btn-iniciar-sesion" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                  ><i class="bi bi-person-circle"></i> Iniciar sesión</button
                 >
               </li>
               <li class="nav-item">
@@ -326,7 +326,7 @@
       <section class="reservacion mt-5">
         <h2>Reserva tu mesa</h2>
         <div class="container">
-          <form class="mx-auto">
+          <form class="mx-auto form-reservar">
             <div class="mb-3">
               <label for="nombre" class="form-label">Nombre*</label>
               <input type="text" class="form-control" id="nombre" placeholder="Nombre" aria-label="nombre">
@@ -407,6 +407,33 @@
         <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
       </div>
     </footer>
+
+    <!-- Ventana modal iniciar sesion -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Iniciar sesión</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="email" class="form-label">Correo electronico</label>
+                <input type="email" class="form-control input-iniciar-sesion" id="email" placeholder="nambre@email.com">
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control input-iniciar-sesion" id="password" placeholder="********">
+              </div>
+              <div class="mb-3 text-center">
+                <button type="submit" class="btn btn-iniciar">Iniciar sesión</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
