--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 >
               </li>
               <li class="nav-item">
-                <button type="button" class="btn btn-iniciar-sesion" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                <button type="button" class="btn btn-iniciar-sesion" data-bs-toggle="modal" data-bs-target="#iniciar-sesion"
                   ><i class="bi bi-person-circle"></i> Iniciar sesión</button
                 >
               </li>
@@ -75,8 +75,8 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"
-                  ><i class="bi bi-people"></i> Registrarse</a
+                <button type="button" class="btn btn-registrarse" data-bs-toggle="modal" data-bs-target="#registrarse"
+                  ><i class="bi bi-people"></i> Registrarse</button
                 >
               </li>
             </ul>
@@ -409,7 +409,7 @@
     </footer>
 
     <!-- Ventana modal iniciar sesion -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="iniciar-sesion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -420,14 +420,45 @@
             <form>
               <div class="mb-3">
                 <label for="email" class="form-label">Correo electronico</label>
-                <input type="email" class="form-control input-iniciar-sesion" id="email" placeholder="nambre@email.com">
+                <input type="email" class="form-control input-modal" id="email" placeholder="nambre@email.com">
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control input-iniciar-sesion" id="password" placeholder="********">
+                <input type="password" class="form-control input-modal" id="password" placeholder="********">
               </div>
               <div class="mb-3 text-center">
                 <button type="submit" class="btn btn-iniciar">Iniciar sesión</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Ventana modal registrarse -->
+    <div class="modal fade" id="registrarse" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Registrarse</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre y apellido</label>
+                <input type="text" class="form-control input-modal" id="nombre" placeholder="Nombre y apellido">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Correo electronico</label>
+                <input type="email" class="form-control input-modal" id="email" placeholder="nambre@email.com">
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Contraseña</label>
+                <input type="password" class="form-control input-modal" id="password" placeholder="********">
+              </div>
+              <div class="mb-3 text-center">
+                <button type="submit" class="btn btn-iniciar">Registrarse</button>
               </div>
             </form>
           </div>
