agregue el maquetado de error 404

--- a/pages/administrador/adminProductos.html
+++ b/pages/administrador/adminProductos.html
@@ -134,9 +134,9 @@
           <div class="col-md-4 mt-4">
             <h5>Nuestras redes</h5>
             <div>
-              <a href="#"><i class="icono bi bi-facebook"></i></a>
-              <a class="mx-3" href="#"><i class="icono bi bi-twitter-x"></i></a>
-              <a href="#"><i class="icono bi bi-instagram"></i></a>
+              <a href="../../pages/error404.html"><i class="icono bi bi-facebook"></i></a>
+              <a class="mx-3" href="../../pages/error404.html"><i class="icono bi bi-twitter-x"></i></a>
+              <a href="../../pages/error404.html"><i class="icono bi bi-instagram"></i></a>
   
             </div>
           </div>
