--- a/pages/categorias/bebidas.html
+++ b/pages/categorias/bebidas.html
@@ -25,9 +25,9 @@
           <div class="d-flex container justify-content-between p-1">
             <p class="my-auto">Reservación: (381) 692734</p>
             <div class="my-auto">
-              <a href="#"><i class="icono bi bi-facebook"></i></a>
-              <a class="mx-3" href="#"><i class="icono bi bi-twitter-x"></i></a>
-              <a href="#"><i class="icono bi bi-instagram"></i></a>
+              <a href="../../pages/error404.html"><i class="icono bi bi-facebook"></i></a>
+              <a class="mx-3" href="../../pages/error404.html"><i class="icono bi bi-twitter-x"></i></a>
+              <a href="../../pages/error404.html"><i class="icono bi bi-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -203,9 +203,9 @@
           <div class="col-md-4 mt-4">
             <h5>Nuestras redes</h5>
             <div>
-              <a href="#"><i class="icono bi bi-facebook"></i></a>
-              <a class="mx-3" href="#"><i class="icono bi bi-twitter-x"></i></a>
-              <a href="#"><i class="icono bi bi-instagram"></i></a>
+              <a href="../../pages/error404.html"><i class="icono bi bi-facebook"></i></a>
+              <a class="mx-3" href="../../pages/error404.html"><i class="icono bi bi-twitter-x"></i></a>
+              <a href="../../pages/error404.html"><i class="icono bi bi-instagram"></i></a>
   
             </div>
           </div>
