agregue el maquetado de error 404

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </div>
             <div class="mb-3">
               <label for="hora" class="form-label">Elige tu hora</label>
-              <input type="datetime" class="form-control" id="fecha" aria-label="hora">
+              <input type="datetime" class="form-control" id="hora" aria-label="hora">
             </div>
           </form>
         </div>
@@ -420,11 +420,11 @@
             <form>
               <div class="mb-3">
                 <label for="email" class="form-label">Correo electronico</label>
-                <input type="email" class="form-control input-modal" id="email" placeholder="nambre@email.com">
+                <input type="email" class="form-control input-modal" id="emailSesion" placeholder="nambre@email.com">
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control input-modal" id="password" placeholder="********">
+                <input type="password" class="form-control input-modal" id="passwordSesion" placeholder="********">
               </div>
               <div class="mb-3 text-center">
                 <button type="submit" class="btn btn-iniciar">Iniciar sesión</button>
@@ -447,15 +447,15 @@
             <form>
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre y apellido</label>
-                <input type="text" class="form-control input-modal" id="nombre" placeholder="Nombre y apellido">
+                <input type="text" class="form-control input-modal" id="nombreApellido" placeholder="Nombre y apellido">
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Correo electronico</label>
-                <input type="email" class="form-control input-modal" id="email" placeholder="nambre@email.com">
+                <input type="email" class="form-control input-modal" id="emailRegistro" placeholder="nambre@email.com">
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control input-modal" id="password" placeholder="********">
+                <input type="password" class="form-control input-modal" id="passwordRegistro" placeholder="********">
               </div>
               <div class="mb-3 text-center">
                 <button type="submit" class="btn btn-iniciar">Registrarse</button>
@@ -470,5 +470,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="./js/administrador.js"></script>
   </body>
 </html>
