--- a/index.html
+++ b/index.html
@@ -59,21 +59,24 @@
                   ><i class="bi bi-cart"></i> Pedidos</a
                 >
               </li>
+              
               <li class="nav-item">
-                <a class="nav-link" href="./pages/administrador/adminProductos.html"
-                  ><i class="bi bi-tools"></i> Administrador</a
-                >
-              </li>
-              <li class="nav-item">
-                <button type="button" class="btn btn-iniciar-sesion" data-bs-toggle="modal" data-bs-target="#iniciar-sesion"
+                <button type="button" class="btn btn-iniciar-sesion" data-bs-toggle="modal" data-bs-target="#iniciar-sesion" id="botonLogin"
                   ><i class="bi bi-person-circle"></i> Iniciar sesión</button
                 >
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"
-                  ><i class="bi bi-box-arrow-left"></i> Cerrar sesión</a
-                >
-              </li>
+              <div class="d-flex">
+                <li class="nav-item">
+                  <a class="nav-link" href="./pages/administrador/adminProductos.html"
+                    ><i class="bi bi-tools"></i> Administrador</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"
+                    ><i class="bi bi-box-arrow-left"></i> Cerrar sesión</a
+                  >
+                </li>
+              </div>
               <li class="nav-item">
                 <button type="button" class="btn btn-registrarse" data-bs-toggle="modal" data-bs-target="#registrarse"
                   ><i class="bi bi-people"></i> Registrarse</button
@@ -427,7 +430,7 @@
                 <input type="password" class="form-control input-modal" id="passwordSesion" placeholder="********">
               </div>
               <div class="mb-3 text-center">
-                <button type="submit" class="btn btn-iniciar">Iniciar sesión</button>
+                <button type="submit" class="btn btn-iniciar" id="btn-login">Iniciar sesión</button>
               </div>
             </form>
           </div>
@@ -471,5 +474,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="./js/administrador.js"></script>
+    <script type="module" src="./js/login.js"></script>
   </body>
 </html>
