--- a/pages/administrador/adminProductos.html
+++ b/pages/administrador/adminProductos.html
@@ -85,70 +85,198 @@
       </nav>
     </header>
     <main class="administrador container mb-5">
-        <h2><i class="bi bi-dropbox"></i> Productos</h2>
-        <hr>
-        <section class="table-responsive"> 
-            <button class="btn btn-agregar my-2"><i class="bi bi-plus-square"></i> Nuevo</button>
-            <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Categoria</th>
-                    <th scope="col">Imagen <span class="text-secondary">(URL de imagen)</span></th>
-                    <th scope="col">Precio</th>
-                    <th scope="col">Estado</th>
-                    <th scope="col">Opciones</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Pizza</td>
-                    <td>Pizzas</td>
-                    <td>https://images.pexels.com/photos/1653877/pexels-photo-1653877.jpeg</td>
-                    <td>$3000</td>
-                    <td>Activo</td>
-                    <td>
-                        <button class="btn btn-danger"><i class="bi bi-trash3"></i></button>
-                        <button class="btn btn-warning"><i class="bi bi-pencil-square"></i></button>
-                    </td>
-                  </tr>
-                 
-                </tbody>
-              </table>
-        </section>
+      <h2><i class="bi bi-dropbox"></i> Productos</h2>
+      <hr />
+      <section class="table-responsive">
+        <button
+          class="btn btn-agregar my-2"
+          data-bs-toggle="modal"
+          data-bs-target="#form"
+        >
+          <i class="bi bi-plus-square"></i> Nuevo
+        </button>
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Categoria</th>
+              <th scope="col">
+                Imagen <span class="text-secondary">(URL de imagen)</span>
+              </th>
+              <th scope="col">Precio</th>
+              <th scope="col">Estado</th>
+              <th scope="col">Opciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Pizza</td>
+              <td>Pizzas</td>
+              <td>
+                https://images.pexels.com/photos/1653877/pexels-photo-1653877.jpeg
+              </td>
+              <td>$3000</td>
+              <td>Activo</td>
+              <td>
+                <button class="btn btn-danger">
+                  <i class="bi bi-trash3"></i>
+                </button>
+                <button class="btn btn-warning">
+                  <i class="bi bi-pencil-square"></i>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
     <footer>
-        <section class="row  text-center container mx-auto">
-          <div class="col-md-4 mt-4">
-           <a href="index.html"><img class="footer-logo my-5" src="../../img/logo_large.png" alt=""></a>
-          </div>
-          <div class="col-md-4 mt-4">
-            <h5>Horarios:</h5>
-            <p>Lunes: 07:00 - 00:30 - Martes: 07:00 - 00:30</p>
-            <p>Miércoles: 07:00 - 00:30 - Jueves: 07:00 - 00:30</p>
-            <p>Viernes: 07:00 - 01:00 - Sábado: 08:00 - 01:00</p>
-            <p>Domingo: 09:00 - 13:00</p>
-          </div>
-          <div class="col-md-4 mt-4">
-            <h5>Nuestras redes</h5>
-            <div>
-              <a href="../../pages/error404.html"><i class="icono bi bi-facebook"></i></a>
-              <a class="mx-3" href="../../pages/error404.html"><i class="icono bi bi-twitter-x"></i></a>
-              <a href="../../pages/error404.html"><i class="icono bi bi-instagram"></i></a>
-  
-            </div>
-          </div>
-        </section>
-        <div class="text-center mt-3 copy">
-          <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
+      <section class="row text-center container mx-auto">
+        <div class="col-md-4 mt-4">
+          <a href="index.html"
+            ><img
+              class="footer-logo my-5"
+              src="../../img/logo_large.png"
+              alt=""
+          /></a>
         </div>
-      </footer>
+        <div class="col-md-4 mt-4">
+          <h5>Horarios:</h5>
+          <p>Lunes: 07:00 - 00:30 - Martes: 07:00 - 00:30</p>
+          <p>Miércoles: 07:00 - 00:30 - Jueves: 07:00 - 00:30</p>
+          <p>Viernes: 07:00 - 01:00 - Sábado: 08:00 - 01:00</p>
+          <p>Domingo: 09:00 - 13:00</p>
+        </div>
+        <div class="col-md-4 mt-4">
+          <h5>Nuestras redes</h5>
+          <div>
+            <a href="../../pages/error404.html"
+              ><i class="icono bi bi-facebook"></i
+            ></a>
+            <a class="mx-3" href="../../pages/error404.html"
+              ><i class="icono bi bi-twitter-x"></i
+            ></a>
+            <a href="../../pages/error404.html"
+              ><i class="icono bi bi-instagram"></i
+            ></a>
+          </div>
+        </div>
+      </section>
+      <div class="text-center mt-3 copy">
+        <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
+      </div>
+    </footer>
+    <!-- Modal formulario -->
+    <div
+      class="modal fade"
+      id="form"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              Administrador
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form id="form-producto">
+              <div class="mb-3">
+                <label for="codigo" class="form-label">Codigo</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="codigo"
+                  placeholder="0001"
+                  minlength="3"
+                  maxlength="100"
+                  disabled
+                />
+              </div>
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="nombre"
+                  placeholder="Nombre"
+                  minlength="3"
+                  maxlength="100"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="categoria" class="form-label">Categoria*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="categoria"
+                  placeholder="Categoria"
+                  minlength="3"
+                  maxlength="100"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="imagen" class="form-label">imagen*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="imagen"
+                  placeholder="Imagen"
+                  minlength="3"
+                  maxlength="100"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="precio" class="form-label">Precio*</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="precio"
+                  placeholder="Precio"
+                  minlength="3"
+                  maxlength="100"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <label for="estado" class="form-label">Estado*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="estado"
+                  placeholder="Estado"
+                  minlength="3"
+                  maxlength="100"
+                  required
+                />
+              </div>
+              <div class="mb-3">
+                <button type="submit" class="btn btn-iniciar">Enviar</button>
+              </div>
+            </form>
+          </div>
+          
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="../../js/administrador.js" type="module"></script>
   </body>
 </html>
